--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -4,7 +4,7 @@ ball_last_seen_max_time: 2
 goal_last_seen_max_time: 10
 start_position_offensive: [-0.2, 0]
 start_position_defensive: [1.5, 0]
-goalie: false
+is_goalie: false
 
 ball_search_walk_start_speed: 0.01
 ball_search_walk_stop_speed: 0.01
@@ -21,7 +21,7 @@ localisation_interval: 30
 localisation_duration: 5
 
 # Enables forced game mode and phase if set to true
-force_playing: true
+force_playing: false
 force_penalty_shootout: false
 
 always_power_kick: true
