--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -1,16 +1,16 @@
 log_level: WARN
 
-ball_last_seen_max_time: 2
-goal_last_seen_max_time: 10
+ball_last_seen_max_time: 2 # time in seconds
+goal_last_seen_max_time: 10 # time in seconds
 start_position_offensive: [-0.2, 0]
 start_position_defensive: [1.5, 0]
 is_goalie: false
 
 ball_search_walk_start_speed: 0.01
 ball_search_walk_stop_speed: 0.01
-ball_search_walk_slow_time: 10
+ball_search_walk_slow_time: 10 # time in seconds
 
-goalie_command_timeout: 1
+goalie_command_timeout: 1 # time in seconds
 goalie_rotation_speed_factor: 0.1
 goalie_max_rotation_speed: 0.1
 goalie_translation_speed_factor: 0.01
@@ -24,7 +24,5 @@ localisation_duration: 5
 force_playing: false
 force_penalty_shootout: false
 
-always_power_kick: true
-
-# Time to walk forward in ready (in milliseconds)
-walk_to_ready_time: 20000
+# Time to walk forward in ready (in seconds)
+walk_to_ready_time: 20
