--- a/module/behaviour/skills/KickScript/data/config/KickScript.yaml
+++ b/module/behaviour/skills/KickScript/data/config/KickScript.yaml
@@ -1,4 +1,6 @@
 log_level: WARN
 
-"KICK_PRIORITY": 50
+# Priority set when wanting to kick
+kick_priority: 40
+# Time between kick command message and kicking before kick is discarded
 message_timeout: 3000
