--- a/module/behaviour/skills/KickScript/data/config/KickScript.yaml
+++ b/module/behaviour/skills/KickScript/data/config/KickScript.yaml
@@ -1,6 +1,6 @@
 log_level: WARN
 
-# Priority set when wanting to kick
+# Value that priority is set to when wanting to kick
 kick_priority: 40
-# Time between kick command message and kicking before kick is discarded
+# Time between kick command message and kicking before kick is discarded (milliseconds)
 message_timeout: 3000
