--- a/module/motion/ScriptEngine/data/scripts/nugus1/StandUpFront.yaml
+++ b/module/motion/ScriptEngine/data/scripts/nugus1/StandUpFront.yaml
@@ -251,7 +251,7 @@
       gain: 15
       torque: 100
     - id: L_HIP_PITCH
-      position: -1.70000005
+      position: -1.79999995
       gain: 15
       torque: 100
     - id: R_KNEE
@@ -385,7 +385,7 @@
       gain: 10
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.800000012
+      position: -0.899999976
       gain: 15
       torque: 100
     - id: R_ANKLE_PITCH
@@ -467,15 +467,15 @@
       gain: 10
       torque: 100
     - id: R_HIP_PITCH
-      position: -0.400000006
+      position: -0.649999976
       gain: 20
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.449999988
+      position: -0.600000024
       gain: 20
       torque: 100
     - id: R_KNEE
-      position: -0.449999988
+      position: 1.20000005
       gain: 20
       torque: 100
     - id: L_KNEE
@@ -483,92 +483,84 @@
       gain: 20
       torque: 100
     - id: R_ANKLE_PITCH
-      position: -0.800000012
-      gain: 10
+      position: -0.699999988
+      gain: 20
       torque: 100
     - id: L_ANKLE_PITCH
-      position: -0.800000012
-      gain: 10
+      position: -0.699999988
+      gain: 20
       torque: 100
 - duration: 3000
   targets:
-    - id: HEAD_YAW
-      position: -0.00153435499
-      gain: 10
-      torque: 100
-    - id: HEAD_PITCH
-      position: 0.530886889
-      gain: 10
-      torque: 100
     - id: R_HIP_YAW
-      position: -0.0291527491
-      gain: 10
+      position: -0.02915275
+      gain: 30
       torque: 100
     - id: L_HIP_YAW
-      position: 0.0199466199
-      gain: 10
+      position: 0.01994662
+      gain: 30
       torque: 100
     - id: R_HIP_ROLL
-      position: -0.150366798
-      gain: 10
+      position: -0.1503668
+      gain: 30
       torque: 100
     - id: L_HIP_ROLL
-      position: 0.0981987417
-      gain: 10
+      position: 0.09819874
+      gain: 30
       torque: 100
     - id: R_HIP_PITCH
-      position: -0.449999988
-      gain: 15
+      position: -0.4802532
+      gain: 30
       torque: 100
     - id: L_HIP_PITCH
-      position: -0.449999988
-      gain: 15
+      position: -0.4909937
+      gain: 30
       torque: 100
     - id: R_KNEE
-      position: 0.800000012
-      gain: 20
+      position: 0.7854941
+      gain: 30
       torque: 100
     - id: L_KNEE
-      position: 0.899999976
-      gain: 20
+      position: 0.8269216
+      gain: 30
       torque: 100
     - id: R_ANKLE_PITCH
-      position: -0.532421291
-      gain: 10
+      position: -0.5324213
+      gain: 30
       torque: 100
     - id: L_ANKLE_PITCH
-      position: -0.556971014
-      gain: 10
+      position: -0.556971
+      gain: 30
       torque: 100
     - id: R_ANKLE_ROLL
-      position: 0.154969901
-      gain: 10
+      position: 0.1549699
+      gain: 30
       torque: 100
     - id: L_ANKLE_ROLL
-      position: -0.0951300263
-      gain: 10
+      position: -0.09513003
+      gain: 30
       torque: 100
     - id: R_SHOULDER_PITCH
-      position: 1.98372996
-      gain: 10
+      position: 1.98373
+      gain: 30
       torque: 100
     - id: R_SHOULDER_ROLL
       position: -0.1762591
-      gain: 10
+      gain: 30
       torque: 100
     - id: R_ELBOW
-      position: -1.57424903
-      gain: 10
+      position: -1.574249
+      gain: 30
       torque: 100
     - id: L_SHOULDER_PITCH
-      position: 2.06811905
-      gain: 10
+      position: 2.068119
+      gain: 30
       torque: 100
     - id: L_SHOULDER_ROLL
-      position: 0.134831503
-      gain: 10
+      position: 0.1348315
+      gain: 30
       torque: 100
     - id: L_ELBOW
-      position: -1.56504202
-      gain: 10
+      position: -1.565042
+      gain: 30
       torque: 100
