Stop extra kick in webots_keyboardwalk and add in a kick timeout (#845)
* use shared ptr

* Remove execution priority

* Reset the priority if it's been a while

* Add stand to webots keyboardwalk role

all the other roles have it

* Fix up config

* Add readme

Co-Authored-By: Tom <thomas16441@gmail.com>

* Adds documentation directives

* Comments and casing

* function snake_case

* pls build

Co-authored-by: Tom <thomas16441@gmail.com>

--- a/module/behaviour/skills/KickScript/data/config/KickScript.yaml
+++ b/module/behaviour/skills/KickScript/data/config/KickScript.yaml
@@ -1,4 +1,6 @@
 log_level: WARN
 
-"KICK_PRIORITY": 50
-"EXECUTION_PRIORITY": 50
+# Value that priority is set to when wanting to kick
+kick_priority: 40
+# Time between kick command message and kicking before kick is discarded (milliseconds)
+message_timeout: 3000
