Optimisation Update - Back to basic

--- a/module/motion/QuinticWalk/data/config/webots/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/config/webots/QuinticWalk.yaml
@@ -9,7 +9,7 @@ walk:
   double_support_ratio: 0.1
   # Give extra swing to first step for better start
   # (in ?, [0:10])
-  first_step_swing_factor: 0.8 #1.0
+  first_step_swing_factor: 0.8 #1.0 I think this is a PROBLEM!!!
   foot:
     # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
