--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -26,3 +26,9 @@ force_penalty_shootout: false
 
 # Time to walk forward in ready (in seconds)
 walk_to_ready_time: 20
+
+# Distance to begin the kick on the ball while normally playing (in metres)
+kicking_distance: 0.45
+
+# Angle from the front to begin kicking the ball (in radians)
+kicking_angle: 0.2
