Update priority configuration and code conventions for our core behaviours  (#853)

--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
@@ -1,5 +1,8 @@
 log_level: WARN
 
+# Priority in subsumption system
+walk_path_planner_priority: 3
+
 # General playing tuning values for approaching ball
 forward_speed: 0.0125
 side_speed: 0.01
