--- a/module/motion/HeadController/data/config/HeadController.yaml
+++ b/module/motion/HeadController/data/config/HeadController.yaml
@@ -1,5 +1,8 @@
 log_level: WARN
 
+# Priority in subsumption system
+head_controller_priority: 5
+
 #Servo controller parameters
 head_motors:
   gain: 10.0
