--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -1,22 +1,14 @@
 log_level: WARN
 
-# Search path positions
+# Search path positions # TODO(BehaviourTeam) Confirm that this is correct: (values in radians)
 min_yaw: &min_yaw -0.7
 max_yaw: &max_yaw 0.7
 min_pitch: &min_pitch -0.1
-max_pitch: &max_pitch 0.1
-positions:
-  [
-    [*min_yaw, *max_pitch],
-    [*min_yaw, *min_pitch],
-    [0, *min_pitch],
-    [*max_yaw, *min_pitch],
-    [*max_yaw, *max_pitch],
-    [0, *max_pitch],
-  ]
+max_pitch: &max_pitch -0.1
+positions: [[*min_yaw, *max_pitch], [*max_yaw, *min_pitch], [0, *min_pitch]]
 
-#Minimum time before search starts
-search_timeout_ms: 3000
+#Minimum time before search starts (milliseconds)
+search_timeout_ms: 10000
 
 #Time between switching search positions
-fixation_time_ms: 750
+fixation_time_ms: 2000
