--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -26,6 +26,7 @@ task: "walk"
 task_config_path: "config/webots/QuinticWalk.yaml" #QuinticWalkBackwards.yaml
 #task_config_path: "config/webots/QuinticWalkBackwards.yaml"
 #task_config_path: "config/webots/QuinticWalkStrafe.yaml"
+task_pattern: "0"
 initial_translation: [-4.0, -3.0, 0.51]  # x, y, z
 intial_rotation: [0, 0, 1, 0]  # x, y, z, angle (rads)
 # The following values are setting the initial values and limits for the walk engine parameters.
@@ -34,7 +35,7 @@ intial_rotation: [0, 0, 1, 0]  # x, y, z, angle (rads)
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: [3, 0.5, 5.0]
+  freq: [1, 0.5, 2.0]
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
   double_support_ratio: [0.1, 0.05, 0.2]
@@ -71,6 +72,6 @@ walk:
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [0.2, 0.01, 0.51]
-  #velocity: [-0.2, -0.51, 0.01] #[0.0, 0.0, 0.0]
-  #rotation: [0.15, 0.1, 1.57]
+  velocity_X: [0.2, 0.01, 0.51]
+  velocity_Y: [0.0, 0.0, 0.0]  #[-0.2, -0.51, 0.01]
+  rotation:   [0.0, 0.0, 0.0]  #[0.15, 0.1, 1.57]
