--- a/module/behaviour/skills/FallingRelax/data/config/FallingRelax.yaml
+++ b/module/behaviour/skills/FallingRelax/data/config/FallingRelax.yaml
@@ -1,6 +1,8 @@
-{
-	"FALLING_ANGLE" : 0.8,
-	"FALLING_ACCELERATION" : 8,
-	"RECOVERY_ACCELERATION" : [9.5, 10.5],
-	"PRIORITY" : 90
-}
+# Common
+log_level: WARN
+relax_fall_priority: 90
+falling_angle: 0.8
+
+# Old
+falling_acceleration: 8
+recovery_acceleration: [9.8, 10.5]
