--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -5,7 +5,15 @@ min_yaw: &min_yaw -0.7
 max_yaw: &max_yaw 0.7
 min_pitch: &min_pitch -0.1
 max_pitch: &max_pitch -0.1
-positions: [[*min_yaw, *max_pitch], [*max_yaw, *min_pitch], [0, *min_pitch]]
+positions:
+  [
+    [*min_yaw, *max_pitch],
+    [*min_yaw, *min_pitch],
+    [0, *min_pitch],
+    [*max_yaw, *min_pitch],
+    [*max_yaw, *max_pitch],
+    [0, *max_pitch],
+  ]
 
 #Minimum time before search starts (milliseconds)
 search_timeout_ms: 10000
