Add exponential filter to SoccerStrategy rBTt

--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -32,3 +32,6 @@ kicking_distance_threshold: 0.55
 
 # Angle from the front to begin kicking the ball (in radians)
 kicking_angle_threshold: 0.2
+
+# Exponential filter smoothing factor on ball position
+rBTt_smoothing_factor: 0.1
