Best I ac n do at fall relax

--- a/module/behaviour/skills/FallingRelax/data/config/FallingRelax.yaml
+++ b/module/behaviour/skills/FallingRelax/data/config/FallingRelax.yaml
@@ -1,8 +1,8 @@
 # Common
 log_level: WARN
-relax_fall_priority: 99
-falling_angle: 0.611
+relax_fall_priority: 90
+falling_angle: 0.75 #0.611
 
 # Old
-falling_acceleration: 8
+falling_acceleration: 10
 recovery_acceleration: [9.5, 10.5]
