--- a/module/network/PlotJuggler/data/config/PlotJuggler.yaml
+++ b/module/network/PlotJuggler/data/config/PlotJuggler.yaml
@@ -3,7 +3,7 @@ log_level: INFO
 # Set to true to forward DataPoint messages to PlotJuggler
 forward_datapoints: true
 
-# Set to true to generate and emit sample datapoints for testing
+# Set to true to generate and emit sample datapoints (for testing the connection to PlotJuggler)
 send_debug_waves: true
 
 # Config for the PlotJuggler UDP server
