--- a/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
@@ -3,10 +3,10 @@ log_level: WARN
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: 2.00
+  freq: 2.882156171492855
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: 0.7
+  double_support_ratio: 0.02126588783229817
   # Give extra swing to first step for better start
   # (in ?, [0:10])
   first_step_swing_factor: 1.0 #1.0
@@ -44,16 +44,16 @@ walk:
   trunk:
     # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
     # (in m, > 0)
-    height: 0.44
+    height: 0.42587245947072816
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
-    pitch: 0.45 #0.3960581214540991 #28
+    pitch: 0.3960581214540991 #28
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
     phase: -0.10781713685949587
     # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
-    x_offset: 0.05 #0.022805009368515608 # 0.045
+    x_offset: 0.022805009368515608 # 0.045
     # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
     y_offset: 0.0066027606288281675
@@ -119,13 +119,13 @@ imu:
     threshold: 0.4
 
 gains:
-  legs: 15
-  arms: 8
+  legs: 13
+  arms: 13
 
 arms:
   right_shoulder_pitch: 2.25
   left_shoulder_pitch: 2.25
   right_shoulder_roll: -0.176
   left_shoulder_roll: 0.176
-  right_elbow: -1.8
-  left_elbow: -1.8
+  right_elbow: -1
+  left_elbow: -1
