--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -21,7 +21,7 @@ localisation_interval: 30
 localisation_duration: 5
 
 # Enables forced game mode and phase if set to true
-force_playing: true
+force_playing: false
 force_penalty_shootout: false
 
 # Time to walk forward in ready (in seconds)
@@ -34,4 +34,5 @@ kicking_distance_threshold: 0.5 # "REAL (rather than Webots)" Robot Suggested Va
 kicking_angle_threshold: 0.3
 
 # Exponential filter smoothing factor on ball position
+# TODO(BehaviourTeam Thailand): Needs to be moved and tested
 rBTt_smoothing_factor: 0.1
