--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.LIAM_DOCKER_USERNAME }}
-          password: ${{ secrets.LIAM_DOCKER_PASSWORD }}
+          username: ${{ secrets.LIAMS_DOCKER_USERNAME }}
+          password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
       - name: 🐳 Build the docker image 🐳
