--- a/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
+++ b/module/behaviour/skills/HeadBehaviourSoccer/data/config/HeadBehaviourSoccer.yaml
@@ -5,18 +5,9 @@ min_yaw: &min_yaw -0.7
 max_yaw: &max_yaw 0.7
 
 # TODO(BehaviourTeam Thailand) Tuning required on these values
-min_pitch: &min_pitch -0.1
-max_pitch: &max_pitch 0.1
+min_pitch: &min_pitch -0.2
 
-positions:
-  [
-    [*min_yaw, *max_pitch],
-    [*min_yaw, *min_pitch],
-    [0, *min_pitch],
-    [*max_yaw, *min_pitch],
-    [*max_yaw, *max_pitch],
-    [0, *max_pitch],
-  ]
+positions: [[*min_yaw, *min_pitch], [0, *min_pitch], [*max_yaw, *min_pitch], [0, *min_pitch]]
 
 #Minimum time before search starts
 search_timeout_ms: 3
