Removed local mirror

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -19,7 +19,7 @@ jobs:
     # Run once for each of the platforms
     strategy:
       matrix:
-        platform: ["generic", "nuc8i7beh", "nuc7i7bnh"]
+        platform: ["generic", "nuc7i7bnh"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
