--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,6 +27,9 @@ RUN pacman -Syyuu --noconfirm --needed --overwrite \*
 COPY usr/local/bin/install-package /usr/local/bin/install-package
 COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
+# Update the pacman keyring
+RUN pacman -Sy archlinux-keyring && pacman -Su
+
 # Install base packages needed for building general toolchain
 # If you have a tool that's needed for a specific module install it before that module
 RUN install-package \
