--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,7 +28,8 @@ COPY usr/local/bin/install-package /usr/local/bin/install-package
 COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
 # Update the pacman keyring
-RUN pacman -Sy archlinux-keyring && pacman -Su
+RUN pacman -Sy archlinux-keyring
+RUN pacman -Su
 
 # Install base packages needed for building general toolchain
 # If you have a tool that's needed for a specific module install it before that module
