pacman key init

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,7 +30,7 @@ COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 # Update the pacman keyring
 RUN pacman -Sy archlinux-keyring --noconfirm
 RUN pacman -Su --noconfirm
-RUN pacman -S gnupg --noconfirm
+RUN pacman-key --init
 
 # Install base packages needed for building general toolchain
 # If you have a tool that's needed for a specific module install it before that module
