--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,6 +28,7 @@ COPY usr/local/bin/install-package /usr/local/bin/install-package
 COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
 # Update the pacman keyring
+RUN pacman-key --refresh-keys
 RUN pacman-key --init
 RUN pacman -Sy archlinux-keyring --noconfirm
 RUN pacman -Su --noconfirm
