--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,9 +28,9 @@ COPY usr/local/bin/install-package /usr/local/bin/install-package
 COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
 # Update the pacman keyring
-RUN pacman-key --refresh-keys
+# RUN pacman-key --refresh-keys
 RUN pacman-key --init
-RUN pacman -Sy archlinux-keyring --noconfirm
+# RUN pacman -Sy archlinux-keyring --noconfirm
 RUN pacman -Su --noconfirm
 
 # Install base packages needed for building general toolchain
