--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,7 +30,7 @@ COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 # Update the pacman keyring
 # RUN pacman-key --refresh-keys
 RUN pacman-key --init
-# RUN pacman -Sy archlinux-keyring --noconfirm
+RUN pacman -Sy archlinux-keyring --noconfirm
 RUN pacman -Su --noconfirm
 
 # Install base packages needed for building general toolchain
