--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -47,7 +47,7 @@ jobs:
           context: docker
           build-args: |
             platform=${{ matrix.platform }}
-            BUILDKIT_INLINE_CACHE=1
+          #           BUILDKIT_INLINE_CACHE=1
           push: true
           # cache-from: |
           #   type=registry,ref=crafty15/nubots:${{ matrix.platform }}
