--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,6 +29,7 @@ COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 
 # Update the pacman keyring
 # RUN pacman-key --refresh-keys
+RUN pacman -S gnupg
 RUN pacman-key --init
 RUN pacman -Sy archlinux-keyring --noconfirm && pacman -Su --noconfirm
 # RUN pacman -Su --noconfirm
