--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,6 +31,7 @@ COPY etc/pacman/pacman.latest.conf /etc/pacman.latest.conf
 # RUN pacman-key --refresh-keys
 RUN pacman -S gnupg --noconfirm
 RUN pacman-key --init
+RUN pacman-key --populate
 RUN pacman -Sy archlinux-keyring --noconfirm && pacman -Su --noconfirm
 # RUN pacman -Su --noconfirm
 
