--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -106,7 +106,7 @@ jobs:
           push: true
           cache-from: |
             type=registry,ref=crafty15/nubots:pull-request-${{ github.event.number }}
-            type=registry,ref=nubots/crafty15/nubots:generic
+            type=registry,ref=crafty15/nubots:generic
             type=inline
 
       - id: image_output
