--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -5,7 +5,7 @@ name: Normal Target Pushes
 on:
   # Triggers the workflow on push events for the main branch
   push:
-    branches: [craft/robocup2022-docker-image]
+    branches: [robocup-docker-image]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
