--- a/docker/etc/pacman/pacman.conf
+++ b/docker/etc/pacman/pacman.conf
@@ -38,7 +38,7 @@ Architecture = auto
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Never DatabaseOptional
+SigLevel    = Never TrustAll
 LocalFileSigLevel = Never
 RemoteFileSigLevel = Never
 
