--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -6,7 +6,7 @@ on:
   # Triggers the workflow on closed events for the main branch
   pull_request:
     # 'closed' covers merges too
-    branches: [craft/robocup2022-docker-image]
+    branches: [robocup2022]
     types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
