--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -89,8 +89,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.LIAMS_DOCKER_USERNAME }}
+          password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
       - name: 🐳 Build the docker image 🐳
@@ -106,7 +106,7 @@ jobs:
           push: true
           cache-from: |
             type=registry,ref=crafty15/nubots:pull-request-${{ github.event.number }}
-            type=registry,ref=nubots/crafty15/nubots:generic
+            type=registry,ref=crafty15/nubots:generic
             type=inline
 
       - id: image_output
