--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -5,7 +5,7 @@ name: NUsight CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
+    branches: [robocup2022]
   pull_request:
 
 # Ensure that only one instance of the workflow is run at a time for each branch/tag.
