--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -127,6 +127,11 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
+    # Run on the container we just built
+    container:
+      image: "${{ needs.build_docker.outputs.image }}"
+      options: --user 0:0
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
