--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -5,7 +5,7 @@ name: NUbots CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
+    branches: [robocup2022, robocup-docker-image]
   # Triggers on PRs to any branch
   pull_request:
 
@@ -89,8 +89,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.LIAMS_DOCKER_USERNAME }}
+          password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
       - name: 🐳 Build the docker image 🐳
