--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -89,7 +89,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.LIAMS_DOCKER_USERNAME }}
+          username: crafty15
           password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
